--- a/pricing.html
+++ b/pricing.html
@@ -18,16 +18,20 @@
       </thead>
       <tbody>
         <tr>
-          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Basic Bot</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge</td>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Free</td>
         </tr>
         <tr>
-          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Advanced Bot</td>
-          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">$9.99 / month</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge Premium</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">$7.50 USD/server</td>
         </tr>
         <tr>
-          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Premium Bot</td>
-          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">$19.99 / month</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Custom Branded CoreForge-Engine V1</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">$9.99 USD/month</td>
+        </tr>
+        <tr>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Custom Branded CoreForge-Engine V2</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Coming soon...</td>
         </tr>
       </tbody>
     </table>
