--- a/engines.html
+++ b/engines.html
@@ -9,13 +9,13 @@
 <body>
   <h1>Engines</h1>
   <div class="container">
-    <h2>CoreForge-Engine V1</h2>
+    <h2>CoreForge-Engine V1 | Current</h2>
     <p>
-      The original CoreForge engine, designed for stability and basic bot functionality. It supports essential commands and provides a solid foundation for bot operations.
+      The current version of CoreForge, this version includes moderation,security, utility, and logging, this is the base version of CoreForge.
     </p>
-    <h2>CoreForge-Engine V2</h2>
+    <h2>CoreForge-Engine V2 | Coming soon.</h2>
     <p>
-      The latest version of CoreForge engine, featuring improved performance, advanced command handling, and enhanced AI integration. V2 is optimized for scalability and customization.
+      The next update of CoreForge will bring support, automod, reation roles, giveaways, leveling, economy, and so much more!
     </p>
   </div>
   <div class="bottom-button-container">
