--- a/information.html
+++ b/information.html
@@ -10,10 +10,10 @@
   <h1>Information</h1>
   <div class="container">
     <p>
-      CoreForge was founded with the mission to provide powerful and customizable bots for communities and developers. Since its inception, CoreForge has evolved to support multiple engines and a wide range of commands to enhance user experience.
+      CoreForge is a True All-in-One Discord Bot, this bot has Custom Commands, Selectable Roles, Utility, Support, Moderation, Auto-Moderation, Leveling, Logging, Voice Master, and so much more!
     </p>
     <p>
-      Our service history is rooted in innovation and community feedback, ensuring that our bots remain reliable and feature-rich.
+      We were previously called Services+, and our history as Services+ shows we make excellent bots, with quality, and security as our primary objectives.
     </p>
   </div>
   <div class="bottom-button-container">
