--- a/support.html
+++ b/support.html
@@ -9,7 +9,8 @@
 <body>
   <h1>Support Server</h1>
   <div class="container">
-    <p>Need help or want to join the community? Click the button below to join our support server:</p>
+    <p>Need help or want to join the community? Click the button below to join our support server</p>
+    <p>or email zombie.clanx@coreforge.dev</p>
     <button onclick="window.open('https://discord.gg/coreforge', '_blank')">Join Support Server</button>
   </div>
   <div class="bottom-button-container">
