--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button onclick="location.href='privacy.html'">Privacy Policy</button>
     <button onclick="location.href='pricing.html'">Pricing</button>
     <button onclick="location.href='commands.html'">Command List</button>
+    <button onclick="location.href='functions.html'">CoreForge Functions</button>
     <button onclick="location.href='invite.html'">Invite Bot</button>
     <button onclick="location.href='support.html'">Support Server</button>
     <button onclick="location.href='engines.html'">Engines</button>
