--- a/functions.html
+++ b/functions.html
@@ -14,6 +14,7 @@
     <button onclick="location.href='privacy.html'">Custom Commamd Functions</button>
     <button onclick="location.href='pricing.html'">Premium Functions</button>
     <button onclick="location.href='commands.html'">Moderation Function</button>
+    <button onclick="location.href='index.html'">Back</button>
   </div>
 </body>
 </html>
