--- a/functions.html
+++ b/functions.html
@@ -10,10 +10,10 @@
   <h1>CoreForge</h1>
   <div class="container">
     <button onclick="location.href='functions_greeter.html'">Greeter Functions</button>
-    <button onclick="location.href='tos.html'">Embed Function</button>
-    <button onclick="location.href='privacy.html'">Custom Commamd Functions</button>
-    <button onclick="location.href='pricing.html'">Premium Functions</button>
-    <button onclick="location.href='commands.html'">Moderation Function</button>
+    <button onclick="location.href='functions_embed.html'">Embed Function</button>
+    <button onclick="location.href='functions_custom_commands.html'">Custom Commamd Functions</button>
+    <button onclick="location.href='functions_premium.html'">Premium Functions</button>
+    <button onclick="location.href='functions_moderation.html'">Moderation Function</button>
   </div>
   <div class="bottom-button-container">
     <button onclick="location.href='index.html'">Back to Home</button>
