--- a/functions.html
+++ b/functions.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>CoreForge</h1>
+  <h1>CoreForge - Functions</h1>
   <div class="container">
     <button onclick="location.href='functions_greeter.html'">Greeter Functions</button>
     <button onclick="location.href='functions_embed.html'">Embed Function</button>
