--- a/page-not-found.html
+++ b/page-not-found.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>ERROR</h1>
-  <div class="container:
+  <div class="container">
     <ul>
       <li>Page not found.</li>
     </ul>
