--- a/page-not-found.html
+++ b/page-not-found.html
@@ -8,10 +8,8 @@
 </head>
 <body>
   <h1>ERROR</h1>
+  <h2>Page not found.</h2>
   <div class="container">
-    <ul>
-      <li>Page not found.</li>
-    </ul>
   </div>
   <div class="bottom-button-container">
     <button onclick="location.href='index.html'">Back to Home</button>
