--- a/pricing.html
+++ b/pricing.html
@@ -20,6 +20,7 @@
         <tr>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge</td>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Free</td>
+        <p>This includes:</p>
         </tr>
         <tr>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge Premium</td>
