--- a/pricing.html
+++ b/pricing.html
@@ -14,13 +14,17 @@
         <tr>
           <th style="border-bottom: 2px solid #2f2f2f; padding: 10px; text-align: left;">Bot Type</th>
           <th style="border-bottom: 2px solid #2f2f2f; padding: 10px; text-align: left;">Price</th>
+          <th style="border-bottom: 2px solid #2f2f2f; padding: 10px; text-align: left;">Includes</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge</td>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Free</td>
-          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">This includes:</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Moderation
+Logging
+Utility
+Support</td>
         </tr>
         <tr>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge Premium</td>
