--- a/pricing.html
+++ b/pricing.html
@@ -21,10 +21,7 @@
         <tr>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge</td>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Free</td>
-          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Moderation
-Logging
-Utility
-Support</td>
+          <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">Moderation, Logging, Utility, Support, Security, Greeter, Information, Economy</td>
         </tr>
         <tr>
           <td style="border-bottom: 1px solid #2f2f2f; padding: 10px;">CoreForge Premium</td>
