--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button onclick="location.href='invite.html'">Invite Bot</button>
     <button onclick="location.href='support.html'">Support Server</button>
     <button onclick="location.href='engines.html'">Engines</button>
+    <button onclick="location.href='store.html'">Store</button>
   </div>
 </body>
 </html>
