--- a/store.html
+++ b/store.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <h1>My Tebex Shop</h1>
-        <p style="text-align: center;">Products from <a href="https://YOUR_STORE_IDENTIFIER.tebex.io" target="_blank">YOUR_STORE_IDENTIFIER.tebex.io</a></p>
+        <p style="text-align: center;">Products from <a href="https://coreforge-shop.tebex.io" target="_blank">coreforge-shop.tebex.io</a></p>
         <button onclick="loadPackages()">Refresh Products</button>
         <div id="packages" class="loading">Loading products...</div>
     </div>
