--- a/store.html
+++ b/store.html
@@ -26,7 +26,7 @@
     </div>
 
     <script>
-        const storeIdentifier = 'coreforge-shop'; // Replace with your Tebex store identifier (e.g., 'mystoreshop')
+        const storeIdentifier = '1692860'; // Replace with your Tebex store identifier (e.g., 'mystoreshop')
         const apiUrl = `https://plugin.tebex.io/webstore/${storeIdentifier}/packages`;
 
         async function loadPackages() {
