--- a/index.html
+++ b/index.html
@@ -1,24 +1,612 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CoreForge - Home</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CoreForge — Discord Automation Suite</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --bg-gradient: radial-gradient(1000px at 80% 10%, #161616 0%, #0b0b0b 70%);
+            --card: #141414;
+            --border: rgba(255, 255, 255, 0.08);
+            --text: #f5f5f5;
+            --muted: #a0a0a0;
+            --accent: #ffffff;
+            --radius: 14px;
+            --transition: all .4s ease;
+            font-family: "Inter", system-ui, sans-serif;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box
+        }
+
+        body {
+            background: var(--bg-gradient);
+            color: var(--text);
+            overflow-x: hidden;
+            scroll-behavior: smooth
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 22px 8%;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(6px);
+            border-bottom: 1px solid var(--border);
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 99;
+            transition: var(--transition)
+        }
+
+        .logo {
+            font-weight: 800;
+            font-size: 1.8rem;
+            letter-spacing: .5px
+        }
+
+        .logo span {
+            color: var(--muted)
+        }
+
+        .navbar nav {
+            display: flex;
+            gap: 30px
+        }
+
+        .navbar nav a {
+            color: var(--muted);
+            font-weight: 500;
+            position: relative;
+            transition: var(--transition)
+        }
+
+        .navbar nav a::after {
+            content: "";
+            position: absolute;
+            bottom: -4px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: var(--accent);
+            transition: var(--transition)
+        }
+
+        .navbar nav a:hover {
+            color: #fff
+        }
+
+        .navbar nav a:hover::after {
+            width: 100%
+        }
+
+        .cta {
+            background: var(--accent);
+            color: #000;
+            padding: 10px 22px;
+            border-radius: var(--radius);
+            font-weight: 600;
+            transition: var(--transition)
+        }
+
+        .cta:hover {
+            background: #e3e3e3;
+            transform: translateY(-1px)
+        }
+
+        .hero {
+            padding: 200px 8% 160px;
+            text-align: center;
+            background: transparent
+        }
+
+        .hero h1 {
+            font-size: 3.8rem;
+            font-weight: 800;
+            letter-spacing: -1px;
+            margin-bottom: 20px
+        }
+
+        .hero h1 span {
+            color: var(--muted)
+        }
+
+        .hero p {
+            max-width: 780px;
+            margin: 0 auto 55px;
+            color: var(--muted);
+            font-size: 1.15rem;
+            line-height: 1.8
+        }
+
+        .hero-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 14px 34px;
+            border-radius: var(--radius);
+            border: 1px solid var(--border);
+            font-weight: 600;
+            transition: var(--transition)
+        }
+
+        .btn:hover {
+            background: rgba(255, 255, 255, .05);
+            transform: translateY(-2px)
+        }
+
+        .btn.primary {
+            background: #fff;
+            color: #000;
+            border: none
+        }
+
+        .btn.primary:hover {
+            background: #e1e1e1
+        }
+
+        .section {
+            padding: 120px 8%;
+            background: transparent
+        }
+
+        .section h2 {
+            text-align: center;
+            font-size: 2.3rem;
+            margin-bottom: 70px;
+            font-weight: 700
+        }
+
+        .grid-3 {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 40px
+        }
+
+        .card {
+            background: var(--card);
+            border: 1px solid var(--border);
+            border-radius: var(--radius);
+            padding: 42px 34px;
+            transition: var(--transition)
+        }
+
+        .card:hover {
+            transform: translateY(-6px);
+            border-color: rgba(255, 255, 255, 0.15)
+        }
+
+        .card h3 {
+            margin-bottom: 12px;
+            font-size: 1.3rem
+        }
+
+        .card p {
+            color: var(--muted);
+            line-height: 1.65
+        }
+
+        .stats {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 36px;
+            text-align: center;
+            margin-top: 40px
+        }
+
+        .stat {
+            background: var(--card);
+            border: 1px solid var(--border);
+            border-radius: var(--radius);
+            padding: 50px 24px;
+            transition: var(--transition)
+        }
+
+        .stat:hover {
+            transform: translateY(-4px);
+            border-color: rgba(255, 255, 255, 0.15)
+        }
+
+        .stat h2 {
+            font-size: 2.4rem;
+            margin-bottom: 6px
+        }
+
+        .stat p {
+            color: var(--muted)
+        }
+
+        .split {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 80px;
+            flex-wrap: wrap
+        }
+
+        .split .text {
+            max-width: 520px
+        }
+
+        .split h2 {
+            font-size: 2.2rem;
+            margin-bottom: 18px
+        }
+
+        .split p {
+            color: var(--muted);
+            line-height: 1.7;
+            margin-bottom: 30px
+        }
+
+        .about {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto
+        }
+
+        .about h2 {
+            font-size: 2.2rem;
+            margin-bottom: 18px
+        }
+
+        .about p {
+            color: var(--muted);
+            line-height: 1.7;
+            font-size: 1.05rem
+        }
+
+        .cta-section {
+            text-align: center;
+            padding: 120px 8%;
+            background: transparent;
+        }
+
+        .cta-section h2 {
+            font-size: 2.4rem;
+            margin-bottom: 30px;
+            font-weight: 700
+        }
+
+        .contact {
+            text-align: center;
+            padding: 100px 8%;
+            background: transparent
+        }
+
+        .contact h2 {
+            font-size: 2rem;
+            margin-bottom: 14px
+        }
+
+        .contact p {
+            color: var(--muted);
+            margin-bottom: 26px
+        }
+
+        .contact a {
+            color: #fff;
+            transition: var(--transition)
+        }
+
+        .contact a:hover {
+            color: var(--muted)
+        }
+
+        footer {
+            background: var(--);
+            border-top: 1px solid var(--border);
+            color: var(--muted);
+            padding: 80px 8% 40px;
+        }
+
+        .footer-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            gap: 60px;
+            margin-bottom: 50px;
+        }
+
+        .footer-brand h3 {
+            font-size: 1.6rem;
+            font-weight: 800;
+            color: var(--text);
+        }
+
+        .footer-brand h3 span {
+            color: var(--muted);
+        }
+
+        .footer-brand p {
+            max-width: 300px;
+            color: var(--muted);
+            font-size: 0.95rem;
+            margin-top: 10px;
+            line-height: 1.6;
+        }
+
+        .footer-links {
+            display: flex;
+            gap: 80px;
+            flex-wrap: wrap;
+        }
+
+        .footer-links h4 {
+            color: var(--text);
+            font-weight: 600;
+            margin-bottom: 12px;
+            font-size: 1rem;
+        }
+
+        .footer-links a {
+            display: block;
+            color: var(--muted);
+            font-size: 0.95rem;
+            text-decoration: none;
+            margin: 6px 0;
+            transition: var(--transition);
+        }
+
+        .footer-links a:hover {
+            color: var(--accent);
+        }
+
+        .footer-bottom {
+            border-top: 1px solid var(--border);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            padding-top: 25px;
+            font-size: 0.9rem;
+            color: var(--muted);
+            gap: 10px;
+        }
+
+        .footer-bottom span {
+            color: var(--text);
+            font-weight: 600;
+        }
+
+        .link {
+            color: #fff;
+            font-weight: 600;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .link:hover {
+            color: #9ca3af;
+            border-bottom-color: rgba(255, 255, 255, 0.4);
+        }
+
+
+        @media(max-width:700px) {
+            .footer-container {
+                flex-direction: column;
+                gap: 40px;
+            }
+
+            .footer-links {
+                flex-direction: column;
+                gap: 30px;
+            }
+
+            .footer-bottom {
+                flex-direction: column;
+                text-align: center;
+            }
+        }
+
+        .fade-up {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: opacity .9s ease, transform .9s ease
+        }
+
+        .visible {
+            opacity: 1;
+            transform: translateY(0)
+        }
+
+        @media(max-width:700px) {
+            .hero h1 {
+                font-size: 2.6rem
+            }
+
+            .navbar nav {
+                display: none
+            }
+
+            .split {
+                flex-direction: column;
+                text-align: center
+            }
+        }
+    </style>
 </head>
+
 <body>
-  <h1>CoreForge</h1>
-  <div class="container">
-    <button onclick="location.href='information.html'">Information</button>
-    <button onclick="location.href='tos.html'">Terms of Service</button>
-    <button onclick="location.href='privacy.html'">Privacy Policy</button>
-    <button onclick="location.href='pricing.html'">Pricing</button>
-    <button onclick="location.href='commands.html'">Command List</button>
-    <button onclick="location.href='functions.html'">CoreForge Functions</button>
-    <button onclick="location.href='invite.html'">Invite Bot</button>
-    <button onclick="location.href='support.html'">Support Server</button>
-    <button onclick="location.href='engines.html'">Engines</button>
-    <button onclick="location.href='store.html'">Store</button>
-  </div>
+    <header class="navbar">
+        <div class="logo">Core<span>Forge</span></div>
+        <nav>
+            <a href="#systems">Systems</a>
+            <a href="#stats">Stats</a>
+            <a href="#vision">Vision</a>
+            <a href="#contact">Contact</a>
+        </nav>
+        <a href="#" class="cta">Add to Discord</a>
+    </header>
+
+    <section class="hero fade-up">
+        <h1>Forge the Future<span>.</span></h1>
+        <p>CoreForge is the definitive framework for next-generation Discord automation — engineered for consistency,
+            speed, and design precision.</p>
+        <div class="hero-buttons">
+            <a href="#" class="btn primary">Invite CoreForge</a>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+    </section>
+
+    <section id="stats" class="section fade-up">
+        <h2>Precision at Scale</h2>
+        <div class="stats">
+            <div class="stat">
+                <h2>220K+</h2>
+                <p>Servers Managed</p>
+            </div>
+            <div class="stat">
+                <h2>13.8M+</h2>
+                <p>Users Synced</p>
+            </div>
+            <div class="stat">
+                <h2>160+</h2>
+                <p>Integrated Systems</p>
+            </div>
+            <div class="stat">
+                <h2>99.99%</h2>
+                <p>Uptime Stability</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="systems" class="section fade-up">
+        <h2>Core Systems</h2>
+        <div class="grid-3">
+            <div class="card">
+                <h3>⚙️ Automation</h3>
+                <p>Advanced logic handling thousands of concurrent events without compromise or delay.</p>
+            </div>
+            <div class="card">
+                <h3>📊 Insight Engine</h3>
+                <p>Powerful, real-time analytics designed to optimize engagement and resource flow.</p>
+            </div>
+            <div class="card">
+                <h3>🧠 Neural AI</h3>
+                <p>Adaptive moderation and user modeling powered by contextual machine reasoning.</p>
+            </div>
+            <div class="card">
+                <h3>🎵 Audio Stack</h3>
+                <p>Custom-built streaming layer for high-fidelity playback, minimal latency, and smooth transitions.</p>
+            </div>
+            <div class="card">
+                <h3>🛡️ Security Grid</h3>
+                <p>Multi-tiered scanning infrastructure to identify threats and neutralize them instantly.</p>
+            </div>
+            <div class="card">
+                <h3>💬 Support Systems</h3>
+                <p>Automated communication tools for staff coordination, inquiry logging, and structured responses.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="vision" class="section fade-up">
+        <div class="split">
+            <div class="text">
+                <h2>Designed for Longevity</h2>
+                <p>CoreForge’s architecture is built to scale infinitely — structured for developers and server networks
+                    that evolve over time. It is not just automation; it’s an infrastructure for growth.</p>
+                <a href="#" class="btn primary">Explore Docs</a>
+            </div>
+            <div class="text">
+                <h2>Refined Through Precision</h2>
+                <p>Every update is carefully engineered with attention to execution and clarity. CoreForge represents
+                    the convergence of performance, minimalism, and innovation — made for the next era of Discord
+                    systems.</p>
+                <a href="#" class="btn">View Roadmap</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section fade-up">
+        <div class="about">
+            <h2>The CoreForge Ethos</h2>
+            <p>CoreForge exists at the intersection of control and design — a unified system for automation, analytics,
+                and communication forged through purpose, not excess.</p>
+        </div>
+    </section>
+
+    <section class="cta-section fade-up">
+        <h2>Deploy CoreForge Today</h2>
+        <a href="#" class="btn primary">Add to Discord</a>
+    </section>
+
+    <section id="contact" class="contact fade-up">
+        <h2>Connect With Us</h2>
+        <p>Join the CoreForge community and discover what’s next in automation.</p>
+        <a href="#">Join Support Server</a>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-brand">
+                <h3>Core<span>Forge</span></h3>
+                <p>Next-generation automation built for performance, design, and precision.</p>
+            </div>
+
+            <div class="footer-links">
+                <div>
+                    <h4>Product</h4>
+                    <a href="#systems">Systems</a>
+                    <a href="#stats">Analytics</a>
+                    <a href="#vision">Framework</a>
+                    <a href="#contact">Support</a>
+                </div>
+                <div>
+                    <h4>Company</h4>
+                    <a href="#">About</a>
+                    <a href="#">Developers</a>
+                    <a href="#">Partners</a>
+                    <a href="#">Careers</a>
+                </div>
+                <div>
+                    <h4>Connect</h4>
+                    <a href="#">Discord</a>
+                    <a href="#">GitHub</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Contact</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>© 2025 CoreForge. All rights reserved.</p>
+            <p>Engineered with precision by
+                <a href="https://solvexs.xyz" target="_blank" class="link">Solvex Studios</a>
+                owner
+                <a href="https://discord.gg/FpXhZxRj" target="_blank" class="link">YK.JEREME</a>
+            </p>
+
+        </div>
+    </footer>
+
+    <script>
+        const navbar = document.querySelector('.navbar');
+        window.addEventListener('scroll', () => { navbar.style.padding = window.scrollY > 50 ? '14px 8%' : '22px 8%'; navbar.style.background = window.scrollY > 50 ? 'rgba(0,0,0,0.8)' : 'rgba(0,0,0,0.6)' });
+        const observer = new IntersectionObserver(entries => { entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible') }) }, { threshold: 0.1 });
+        document.querySelectorAll('.fade-up').forEach(el => observer.observe(el));
+    </script>
 </body>
+
 </html>
