--- a/index.html
+++ b/index.html
@@ -401,6 +401,59 @@
             border-bottom-color: rgba(255, 255, 255, 0.4);
         }
 
+        .popup-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.85);
+    backdrop-filter: blur(6px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    animation: fadeIn 0.4s ease forwards;
+  }
+  .popup {
+    background: #141414;
+    border: 1px solid rgba(255,255,255,0.1);
+    border-radius: 16px;
+    padding: 40px 36px;
+    text-align: center;
+    max-width: 420px;
+    box-shadow: 0 0 60px rgba(0,0,0,0.4);
+    animation: scaleIn 0.3s ease forwards;
+  }
+  .popup h2 {
+    font-size: 1.6rem;
+    margin-bottom: 14px;
+  }
+  .popup p {
+    color: #9ca3af;
+    line-height: 1.6;
+    font-size: 1rem;
+    margin-bottom: 28px;
+  }
+  .popup button {
+    background: #fff;
+    color: #000;
+    font-weight: 600;
+    border: none;
+    padding: 12px 28px;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .popup button:hover {
+    background: #e5e5e5;
+    transform: translateY(-1px);
+  }
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  @keyframes scaleIn {
+    from {transform: scale(0.95);opacity: 0;}
+    to {transform: scale(1);opacity: 1;}
+  }
 
         @media(max-width:700px) {
             .footer-container {
@@ -601,11 +654,23 @@
         </div>
     </footer>
 
+    <div id="devPopup" class="popup-overlay">
+  <div class="popup">
+    <h2>🚧 Under Development</h2>
+    <p>This website is currently in active development. Some features or sections may be incomplete or unavailable.</p>
+    <button id="closePopup">Continue</button>
+  </div>
+</div>
+
     <script>
         const navbar = document.querySelector('.navbar');
         window.addEventListener('scroll', () => { navbar.style.padding = window.scrollY > 50 ? '14px 8%' : '22px 8%'; navbar.style.background = window.scrollY > 50 ? 'rgba(0,0,0,0.8)' : 'rgba(0,0,0,0.6)' });
         const observer = new IntersectionObserver(entries => { entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible') }) }, { threshold: 0.1 });
         document.querySelectorAll('.fade-up').forEach(el => observer.observe(el));
+
+          document.getElementById("closePopup").addEventListener("click", () => {
+    document.getElementById("devPopup").style.display = "none";
+  });
     </script>
 </body>
 
