--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
     <section id="contact" class="contact fade-up">
         <h2>Connect With Us</h2>
         <p>Join the CoreForge community and discover what’s next in automation.</p>
-        <a href="https://discord.gg/coreforge">Join Support Server</a>
+        <a href="#">Join Support Server</a>
     </section>
 
     <footer>
