--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             <a href="#vision">Vision</a>
             <a href="#contact">Contact</a>
         </nav>
-        <a href="#" class="cta">Add to Discord</a>
+        <a href="https://discord.com/invite/corefore" class="cta">Add to Discord</a>
     </header>
 
     <section class="hero fade-up">
@@ -517,7 +517,7 @@
         <p>CoreForge is the definitive framework for next-generation Discord automation — engineered for consistency,
             speed, and design precision.</p>
         <div class="hero-buttons">
-            <a href="#" class="btn primary">Invite CoreForge</a>
+            <a href="https://discord.com/invite/corefore" class="btn primary">Invite CoreForge</a>
             <a href="#" class="btn">Learn More</a>
         </div>
     </section>
@@ -526,15 +526,15 @@
         <h2>Precision at Scale</h2>
         <div class="stats">
             <div class="stat">
-                <h2>220K+</h2>
+                <h2>2+</h2>
                 <p>Servers Managed</p>
             </div>
             <div class="stat">
-                <h2>13.8M+</h2>
+                <h2>4+</h2>
                 <p>Users Synced</p>
             </div>
             <div class="stat">
-                <h2>160+</h2>
+                <h2>0+</h2>
                 <p>Integrated Systems</p>
             </div>
             <div class="stat">
@@ -602,13 +602,13 @@
 
     <section class="cta-section fade-up">
         <h2>Deploy CoreForge Today</h2>
-        <a href="#" class="btn primary">Add to Discord</a>
+        <a href="https://discord.com/invite/corefore" class="btn primary">Add to Discord</a>
     </section>
 
     <section id="contact" class="contact fade-up">
         <h2>Connect With Us</h2>
         <p>Join the CoreForge community and discover what’s next in automation.</p>
-        <a href="#">Join Support Server</a>
+        <a href="https://discord.gg/coreforge">Join Support Server</a>
     </section>
 
     <footer>
@@ -624,7 +624,7 @@
                     <a href="#systems">Systems</a>
                     <a href="#stats">Analytics</a>
                     <a href="#vision">Framework</a>
-                    <a href="#contact">Support</a>
+                    <a href="https://discord.gg/coreforge">Support</a>
                 </div>
                 <div>
                     <h4>Company</h4>
@@ -635,7 +635,7 @@
                 </div>
                 <div>
                     <h4>Connect</h4>
-                    <a href="#">Discord</a>
+                    <a href="https://discord.gg/coreforge">Discord</a>
                     <a href="#">GitHub</a>
                     <a href="#">Twitter</a>
                     <a href="#">Contact</a>
