--- a/Priv.html
+++ b/Priv.html
@@ -95,7 +95,7 @@ li{margin-bottom:6px}
 
 <main class="main">
   <section class="card">
-    <h1>Privacy Policy</h1>
+    <h1>CoreFoge Privacy Policy</h1>
     <p class="lead">This Privacy Policy explains how CoreForge collects, uses, and stores data when you interact with the CoreForge Discord bot and related services.</p>
 
     <h2>1. Information We Collect</h2>
