--- a/TOS.html
+++ b/TOS.html
@@ -95,7 +95,7 @@ li{margin-bottom:6px}
 
 <main class="main">
   <section class="card">
-    <h1>Terms of Service</h1>
+    <h1>CoreFoge Terms of Service</h1>
     <p class="lead">These Terms of Service govern your use of the CoreForge Discord bot, related services, and any associated websites or systems operated under the CoreForge ecosystem.</p>
 
     <h2>1. Acceptance of Terms</h2>
