--- a/index.html
+++ b/index.html
@@ -541,6 +541,10 @@
                 <h2>99.99%</h2>
                 <p>Uptime Stability</p>
             </div>
+            <div class="stat">
+                <h2>1+</h2>
+                <p>Addons</p>
+            </div>
         </div>
     </section>
 
