--- a/index.html
+++ b/index.html
@@ -545,6 +545,18 @@
                 <h2>1+</h2>
                 <p>Addons</p>
             </div>
+            <div class="stat">
+                <h2>4</h2>
+                <p>Developers</p>
+            </div>
+            <div class="stat">
+                <h2>300+</h2>
+                <p>Community Members</p>
+            </div>
+            <div class="stat">
+                <h2>N/A</h2>
+                <p>Rating</p>
+            </div>
         </div>
     </section>
 
