--- a/index.html
+++ b/index.html
@@ -646,8 +646,8 @@
                     <h4>Company</h4>
                     <a href="#">About</a>
                     <a href="#">Developers</a>
-                    <a href="#privacy.html">Privacy Policy</a>
-                    <a href="#tos.html">Terms of Service</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="tos.html">Terms of Service</a>
                 </div>
                 <div>
                     <h4>Connect</h4>
