--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 <p>Addons</p>
             </div>
             <div class="stat">
-                <h2>4</h2>
+                <h2>3</h2>
                 <p>Developers</p>
             </div>
             <div class="stat">
@@ -639,22 +639,22 @@
                     <h4>Product</h4>
                     <a href="#systems">Systems</a>
                     <a href="#stats">Analytics</a>
-                    <a href="#vision">Framework</a>
+                    <a href="commands.html">Commands</a>
                     <a href="https://discord.gg/coreforge">Support</a>
                 </div>
                 <div>
                     <h4>Company</h4>
-                    <a href="#">About</a>
-                    <a href="#">Developers</a>
+                    <a href="#vision">About</a>
+                    <a href="developers.html">Developers</a>
                     <a href="privacy.html">Privacy Policy</a>
                     <a href="tos.html">Terms of Service</a>
                 </div>
                 <div>
                     <h4>Connect</h4>
                     <a href="https://discord.gg/coreforge">Discord</a>
-                    <a href="#">GitHub</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">Contact</a>
+                    <a href="https://github.com/NOT-ZCX">GitHub</a>
+                    <a href="#null">N/A</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
