Change title and add navigation links in 404 page

--- a/page-not-found.html
+++ b/page-not-found.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CoreForge — Transcript</title>
+<title>CoreForge — ERROR</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
 :root{
@@ -87,8 +87,10 @@ li{margin-bottom:6px}
 <body>
 <header class="navbar">
   <div class="logo">Core<span>Forge</span></div>
-  <div class="nav-links">
- </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+        </nav>
 </header>
 
 <main class="main">
