--- a/utility-commands.html
+++ b/utility-commands.html
@@ -95,7 +95,7 @@ li{margin-bottom:6px}
 
 <main class="main">
   <section class="card">
-<h2>Utility Commands</h2>
+<h2>utility Commands</h2>
 <p>utility embed</p>
 <p>utility reminder</p>
 <p>utility button role</p>
