--- a/index.html
+++ b/index.html
@@ -504,10 +504,10 @@
     <header class="navbar">
         <div class="logo">Core<span>Forge</span></div>
         <nav>
-            <a href="#systems">Systems</a>
-            <a href="#stats">Stats</a>
-            <a href="#vision">Vision</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="commands.html">Commands</a>
+            <a href="https://discord.gg/coreforge">Join Server</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <a href="https://discord.com/invite/corefore" class="cta">Add to Discord</a>
     </header>
