--- a/commands.html
+++ b/commands.html
@@ -514,21 +514,21 @@
         <h1>Command Categories<span>.</span></h1>
         <p>Please select a category to view.</p>
         <div class="hero-buttons">
-            <a href="-commands.html" class="btn primary">Moderation</a>
-            <a href="-commands.html" class="btn primary">Auto-Moderation</a>
-            <a href="-commands.html" class="btn primary">Utility</a>
-            <a href="-commands.html" class="btn primary">Support</a>
-            <a href="-commands.html" class="btn primary">Rewards</a>
-            <a href="-commands.html" class="btn primary">Giveaway</a>
-            <a href="-commands.html" class="btn primary">Security</a>
-            <a href="-commands.html" class="btn primary">Logging</a>
-            <a href="-commands.html" class="btn primary">Voice</a>
-            <a href="-commands.html" class="btn primary">Information</a>
-            <a href="-commands.html" class="btn primary">Greeter</a>
-            <a href="-commands.html" class="btn primary">Leveling</a>
-            <a href="-commands.html" class="btn primary">Economy</a>
-            <a href="-commands.html" class="btn primary">Help</a>
-            <a href="-commands.html" class="btn primary">Development</a>
+            <a href="moderation-commands.html" class="btn primary">Moderation</a>
+            <a href="automod-commands.html" class="btn primary">Auto-Moderation</a>
+            <a href="utility-commands.html" class="btn primary">Utility</a>
+            <a href="support-commands.html" class="btn primary">Support</a>
+            <a href="rewards-commands.html" class="btn primary">Rewards</a>
+            <a href="giveaway-commands.html" class="btn primary">Giveaway</a>
+            <a href="security-commands.html" class="btn primary">Security</a>
+            <a href="logging-commands.html" class="btn primary">Logging</a>
+            <a href="voice-commands.html" class="btn primary">Voice</a>
+            <a href="information-commands.html" class="btn primary">Information</a>
+            <a href="greeter-commands.html" class="btn primary">Greeter</a>
+            <a href="leveling-commands.html" class="btn primary">Leveling</a>
+            <a href="economy-commands.html" class="btn primary">Economy</a>
+            <a href="help-commands.html" class="btn primary">Help</a>
+            <a href="development-commands.html" class="btn primary">Development</a>
 
         </div>
     </section>
