--- a/api.html
+++ b/api.html
@@ -514,6 +514,9 @@
       <section class="hero fade-up">
         <h1>CoreForge Addon Development API<span>.</span></h1>
         <p>CSorry, this page is currently not able to be accessed.</p>
+        <div class="hero-buttons">
+            <a href="index.html" class="btn primary">Home Page</a>
+        </div>
     </section>
     
   <script>
