--- a/page-not-found.html
+++ b/page-not-found.html
@@ -513,8 +513,7 @@
 
       <section class="hero fade-up">
         <h1>CoreForge - ERROR<span>.</span></h1>
-        <h2>Page not found</h2>
-        <p>CSorry, this page could not be found.</p>
+        <h2>Sorry, this page could not be found.</h2>
         <div class="hero-buttons">
             <a href="index.html" class="btn primary">Home Page</a>
         </div>
