--- a/commands.html
+++ b/commands.html
@@ -529,7 +529,7 @@
             <a href="economy-commands.html" class="btn primary">Economy</a>
             <a href="help-commands.html" class="btn primary">Help</a>
             <a href="development-commands.html" class="btn primary">Development</a>
-
+            <a href="index.html" class="btn primary">Home Page</a>
         </div>
     </section>
     
