--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@
             speed, and design precision.</p>
         <div class="hero-buttons">
             <a href="https://discord.com/invite/corefore" class="btn primary">Invite CoreForge</a>
-            <a href="#" class="btn">Learn More</a>
+            <a href="commands.html" class="btn primary">Commands</a>
+            <a href="api.html" class="btn primary">Development API</a>
         </div>
     </section>
 
