--- a/commands.html
+++ b/commands.html
@@ -501,13 +501,16 @@
 </head>
 
 <body>
-<header class="navbar">
-  <div class="logo">Core<span>Forge</span></div>
+    <header class="navbar">
+        <div class="logo">Core<span>Forge</span></div>
         <nav>
             <a href="index.html">Home</a>
+            <a href="commands.html">Commands</a>
+            <a href="https://discord.gg/coreforge">Join Server</a>
             <a href="contact.html">Contact</a>
         </nav>
-</header>
+        <a href="https://discord.com/invite/corefore" class="cta">Add to Discord</a>
+    </header>
 
 <main class="main">
     <section class="hero fade-up">
